@@ -268,7 +268,8 @@ i.default.values <- list(vertex=list(color="SkyBlue2",
                            label.cex=1,
                            label.color="darkblue",
                            arrow.size=1,
-                           arrow.mode=i.get.arrow.mode),
+                           arrow.mode=i.get.arrow.mode,
+                           arrow.width=1),
                          plot=list(layout=layout.random,
                            margin=c(0,0,0,0),
                            rescale=TRUE,
