@@ -231,6 +231,17 @@
 
       The default value is 1.
     }
+    \item{arrow.width}{The width of the arrows. Currently this is a
+      constant, so it is the same for every edge. If a vector is
+      submitted then only the first element is used, ie. if this is
+      taken from an edge attribute then only the attribute of the first
+      edge is used for all arrows. This will likely change in the future.
+
+      This argument is currently only used by \code{\link{plot.igraph}}.
+      
+      The default value is 1, which gives the same width as before
+      this option appeared in igraph.
+    }
     \item{lty}{The line type for the edges. Almost the same format is
       accepted as for the standard graphics \code{\link[graphics]{par}},
       0 and \dQuote{blank} mean no edges, 1 and \dQuote{solid} are for
